Update nav fontsize to prevent overflow.

--- a/_sass/layout/_nav.sass
+++ b/_sass/layout/_nav.sass
@@ -15,3 +15,5 @@
     &.active 
       a 
         color: $black
+    +media-max(340px)
+      font-size: 12px
